feat: use child gauge addresses

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:31.425397Z",
-     "start_time": "2023-09-05T12:09:31.413558Z"
+     "end_time": "2023-09-05T12:54:45.396528Z",
+     "start_time": "2023-09-05T12:54:45.379509Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "import json\n",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:35.463664Z",
-     "start_time": "2023-09-05T12:09:31.424892Z"
+     "end_time": "2023-09-05T12:54:49.094377Z",
+     "start_time": "2023-09-05T12:54:45.390495Z"
     }
    }
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -146,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:35.468903Z",
-     "start_time": "2023-09-05T12:09:35.465647Z"
+     "end_time": "2023-09-05T12:54:49.101107Z",
+     "start_time": "2023-09-05T12:54:49.095948Z"
     }
    }
   },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "import os\n",
@@ -232,14 +232,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:38.257976Z",
-     "start_time": "2023-09-05T12:09:35.481523Z"
+     "end_time": "2023-09-05T12:54:49.308358Z",
+     "start_time": "2023-09-05T12:54:49.107609Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -267,8 +267,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:44.041998Z",
-     "start_time": "2023-09-05T12:09:38.261364Z"
+     "end_time": "2023-09-05T12:54:54.372087Z",
+     "start_time": "2023-09-05T12:54:49.311481Z"
     }
    }
   },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -296,13 +296,14 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.042869</td>\n      <td>20000.000000</td>\n      <td>20.000000</td>\n      <td>2.079593</td>\n      <td>1.75</td>\n      <td>1.329593</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.680929</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.017578</td>\n      <td>1.00</td>\n      <td>1.017578</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.571453</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>2.509921</td>\n      <td>1.50</td>\n      <td>2.009921</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.602972</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006231</td>\n      <td>1.00</td>\n      <td>1.006231</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.650079</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006203</td>\n      <td>1.00</td>\n      <td>1.006203</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x56c0626E6E3931af90EbB679A321225180d4b32B</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.646215</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.005974</td>\n      <td>1.00</td>\n      <td>1.005974</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x671eD21480acf63b0AB7297b901505F5BccAfa9b</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.496952</td>\n      <td>9530.551316</td>\n      <td>9.530551</td>\n      <td>1.001665</td>\n      <td>1.00</td>\n      <td>1.001665</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.419695</td>\n      <td>8743.651107</td>\n      <td>8.743651</td>\n      <td>1.001235</td>\n      <td>1.00</td>\n      <td>1.001235</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.303699</td>\n      <td>7108.282420</td>\n      <td>7.108282</td>\n      <td>1.016364</td>\n      <td>1.00</td>\n      <td>1.016364</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.134817</td>\n      <td>2872.506226</td>\n      <td>2.872506</td>\n      <td>1.001628</td>\n      <td>1.00</td>\n      <td>1.001628</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.080774</td>\n      <td>1745.008932</td>\n      <td>1.745009</td>\n      <td>1.000182</td>\n      <td>1.00</td>\n      <td>1.000182</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x8F0B53F3BA19Ee31C0A73a6F6D84106340fadf5f</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.042382</td>\n      <td>20000.000000</td>\n      <td>20.000000</td>\n      <td>2.078621</td>\n      <td>1.75</td>\n      <td>1.328621</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.680894</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.017526</td>\n      <td>1.00</td>\n      <td>1.017526</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.568402</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>2.506943</td>\n      <td>1.50</td>\n      <td>2.006943</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.602963</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006216</td>\n      <td>1.00</td>\n      <td>1.006216</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.650067</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006185</td>\n      <td>1.00</td>\n      <td>1.006185</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x56c0626E6E3931af90EbB679A321225180d4b32B</td>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.646204</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.005957</td>\n      <td>1.00</td>\n      <td>1.005957</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x671eD21480acf63b0AB7297b901505F5BccAfa9b</td>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.496950</td>\n      <td>9531.469776</td>\n      <td>9.531470</td>\n      <td>1.001660</td>\n      <td>1.00</td>\n      <td>1.001660</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.419693</td>\n      <td>8743.740292</td>\n      <td>8.743740</td>\n      <td>1.001231</td>\n      <td>1.00</td>\n      <td>1.001231</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.303684</td>\n      <td>7107.311736</td>\n      <td>7.107312</td>\n      <td>1.016316</td>\n      <td>1.00</td>\n      <td>1.016316</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x96056DF5a61B758005a219a052D72085C45df92c</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.134817</td>\n      <td>2872.488509</td>\n      <td>2.872489</td>\n      <td>1.001623</td>\n      <td>1.00</td>\n      <td>1.001623</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.080774</td>\n      <td>1744.989687</td>\n      <td>1.744990</td>\n      <td>1.000182</td>\n      <td>1.00</td>\n      <td>1.000182</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
+    "from notebooks import get_abi\n",
     "from IPython.core.display import HTML\n",
     "import pandas as pd\n",
     "\n",
@@ -322,8 +323,14 @@
     "    to_distribute = ARBITRUM_TO_DISTRIBUTE * gauge_data['voteWeight'] / total_weight\n",
     "    # Cap distribution\n",
     "    to_distribute = to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr]\n",
+    "    # Get arb gauge addr\n",
+    "    mainnet_arb_root_gauge_contract = web3.eth.contract(\n",
+    "        address=Web3.toChecksumAddress(gauge_addr),\n",
+    "        abi=get_abi(\"ArbRootGauge\")\n",
+    "    )\n",
     "    arb_gauge_distributions[gauge_addr] = {\n",
     "        'gaugeAddress': gauge_addr,\n",
+    "        'recipientGaugeAddr': mainnet_arb_root_gauge_contract.functions.getRecipient().call(),\n",
     "        'pool': gauge_data['pool'],\n",
     "        'symbol': gauge_data['symbol'],\n",
     "        'voteWeight': gauge_data['voteWeight'],\n",
@@ -377,8 +384,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:44.060926Z",
-     "start_time": "2023-09-05T12:09:44.053995Z"
+     "end_time": "2023-09-05T12:54:59.539943Z",
+     "start_time": "2023-09-05T12:54:54.378908Z"
     }
    }
   },
@@ -393,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Export to json\n",
@@ -414,7 +421,7 @@
     "    if tx['contractMethod']['name'] == 'setRecipientList':\n",
     "        # Inject list of gauges addresses:\n",
     "        tx['contractInputsValues'][\n",
-    "            'gaugeAddresses'] = f\"[{','.join([gauge['gaugeAddress'] for gauge in gauge_distributions])}]\"\n",
+    "            'gaugeAddresses'] = f\"[{','.join([gauge['recipientGaugeAddr'] for gauge in gauge_distributions])}]\"\n",
     "        # Inject vote weights:\n",
     "        tx['contractInputsValues']['amountsPerPeriod'] = f\"[{','.join([str(int(gauge['distribution'] * 1e18)) for gauge in gauge_distributions])}]\"\n",
     "        break\n",
@@ -426,8 +433,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:09:44.081394Z",
-     "start_time": "2023-09-05T12:09:44.059084Z"
+     "end_time": "2023-09-05T12:55:08.860900Z",
+     "start_time": "2023-09-05T12:55:08.854549Z"
     }
    }
   }
