--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:54:45.396528Z",
-     "start_time": "2023-09-05T12:54:45.379509Z"
+     "end_time": "2023-09-07T13:03:07.751645Z",
+     "start_time": "2023-09-07T13:03:07.741582Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import json\n",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:54:49.094377Z",
-     "start_time": "2023-09-05T12:54:45.390495Z"
+     "end_time": "2023-09-07T13:03:09.356997Z",
+     "start_time": "2023-09-07T13:03:07.747958Z"
     }
    }
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -146,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:54:49.101107Z",
-     "start_time": "2023-09-05T12:54:49.095948Z"
+     "end_time": "2023-09-07T13:03:09.358210Z",
+     "start_time": "2023-09-07T13:03:09.341276Z"
     }
    }
   },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import os\n",
@@ -232,14 +232,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:54:49.308358Z",
-     "start_time": "2023-09-05T12:54:49.107609Z"
+     "end_time": "2023-09-07T13:03:10.504614Z",
+     "start_time": "2023-09-07T13:03:09.351715Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -267,8 +267,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:54:54.372087Z",
-     "start_time": "2023-09-05T12:54:49.311481Z"
+     "end_time": "2023-09-07T13:03:16.362479Z",
+     "start_time": "2023-09-07T13:03:10.508944Z"
     }
    }
   },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x8F0B53F3BA19Ee31C0A73a6F6D84106340fadf5f</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.042382</td>\n      <td>20000.000000</td>\n      <td>20.000000</td>\n      <td>2.078621</td>\n      <td>1.75</td>\n      <td>1.328621</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.680894</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.017526</td>\n      <td>1.00</td>\n      <td>1.017526</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.568402</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>2.506943</td>\n      <td>1.50</td>\n      <td>2.006943</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.602963</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006216</td>\n      <td>1.00</td>\n      <td>1.006216</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.650067</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006185</td>\n      <td>1.00</td>\n      <td>1.006185</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x56c0626E6E3931af90EbB679A321225180d4b32B</td>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.646204</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.005957</td>\n      <td>1.00</td>\n      <td>1.005957</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x671eD21480acf63b0AB7297b901505F5BccAfa9b</td>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.496950</td>\n      <td>9531.469776</td>\n      <td>9.531470</td>\n      <td>1.001660</td>\n      <td>1.00</td>\n      <td>1.001660</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.419693</td>\n      <td>8743.740292</td>\n      <td>8.743740</td>\n      <td>1.001231</td>\n      <td>1.00</td>\n      <td>1.001231</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.303684</td>\n      <td>7107.311736</td>\n      <td>7.107312</td>\n      <td>1.016316</td>\n      <td>1.00</td>\n      <td>1.016316</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x96056DF5a61B758005a219a052D72085C45df92c</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.134817</td>\n      <td>2872.488509</td>\n      <td>2.872489</td>\n      <td>1.001623</td>\n      <td>1.00</td>\n      <td>1.001623</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.080774</td>\n      <td>1744.989687</td>\n      <td>1.744990</td>\n      <td>1.000182</td>\n      <td>1.00</td>\n      <td>1.000182</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>recipientGaugeAddr</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x8F0B53F3BA19Ee31C0A73a6F6D84106340fadf5f</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.397733</td>\n      <td>12000.530051</td>\n      <td>12.000530</td>\n      <td>3.006420</td>\n      <td>1.75</td>\n      <td>2.256420</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xcf9f895296F5e1D66a7D4dcf1d92e1B435E9f999</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.577993</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>2.508719</td>\n      <td>1.50</td>\n      <td>2.008719</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x011417BBED6FC9cefF36C032D431b0eFcBA7f8B3</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.423974</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.008952</td>\n      <td>1.00</td>\n      <td>1.008952</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xd956246EA5b06DEa930F0A7feC1FFf000436e3f2</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>1.101354</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.000508</td>\n      <td>1.00</td>\n      <td>1.000508</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x82d2c7B67Eaa5028c89BE86CeA8e1DF5bd2119A1</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.820928</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.004999</td>\n      <td>1.00</td>\n      <td>1.004999</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x2eB5661002b68EBE887d29d415c3A3b52536912C</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.818040</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.005089</td>\n      <td>1.00</td>\n      <td>1.005089</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xd6B875d62c2661eaB66472F36c672e4B512f1135</td>\n      <td>0xadE4A71BB62bEc25154CFc7e6ff49A513B491E81</td>\n      <td>rETH-WETH-BPT</td>\n      <td>0.637372</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.002073</td>\n      <td>1.00</td>\n      <td>1.002073</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x260cbb867359a1084eC97de4157d06ca74e89415</td>\n      <td>0x9791d590788598535278552EEcD4b211bFc790CB</td>\n      <td>wstETH-WETH-BPT</td>\n      <td>0.343781</td>\n      <td>6872.733998</td>\n      <td>6.872734</td>\n      <td>1.015881</td>\n      <td>1.00</td>\n      <td>1.015881</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xfC745035F31BCbaEb2D1a89aA9171495c671F6cE</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.269919</td>\n      <td>6262.319541</td>\n      <td>6.262320</td>\n      <td>1.004606</td>\n      <td>1.00</td>\n      <td>1.004606</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa14453084318277b11d38FbE05D857A4f647442B</td>\n      <td>0x423A1323c871aBC9d89EB06855bF5347048Fc4A5</td>\n      <td>4POOL-BPT</td>\n      <td>0.281737</td>\n      <td>6175.669987</td>\n      <td>6.175670</td>\n      <td>1.005986</td>\n      <td>1.00</td>\n      <td>1.005986</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xb438c6cc53315FfA3fcD1bc8b27d6c3155b0B56A</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.226096</td>\n      <td>6112.912731</td>\n      <td>6.112913</td>\n      <td>1.022296</td>\n      <td>1.00</td>\n      <td>1.022296</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x04fc019017eD3F921D5ec11fFf84B870744BA0d1</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.093370</td>\n      <td>2209.492075</td>\n      <td>2.209492</td>\n      <td>1.000177</td>\n      <td>1.00</td>\n      <td>1.000177</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xeF767E740D83d410794519c2F93Db32e44359a5C</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.012103</td>\n      <td>366.341617</td>\n      <td>0.366342</td>\n      <td>660.655974</td>\n      <td>1.00</td>\n      <td>660.655974</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -329,7 +329,6 @@
     "        abi=get_abi(\"ArbRootGauge\")\n",
     "    )\n",
     "    arb_gauge_distributions[gauge_addr] = {\n",
-    "        'gaugeAddress': gauge_addr,\n",
     "        'recipientGaugeAddr': mainnet_arb_root_gauge_contract.functions.getRecipient().call(),\n",
     "        'pool': gauge_data['pool'],\n",
     "        'symbol': gauge_data['symbol'],\n",
@@ -384,8 +383,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:54:59.539943Z",
-     "start_time": "2023-09-05T12:54:54.378908Z"
+     "end_time": "2023-09-07T13:04:14.280235Z",
+     "start_time": "2023-09-07T13:04:08.966284Z"
     }
    }
   },
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Export to json\n",
@@ -433,8 +432,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T12:55:08.860900Z",
-     "start_time": "2023-09-05T12:55:08.854549Z"
+     "end_time": "2023-09-07T13:04:15.904309Z",
+     "start_time": "2023-09-07T13:04:15.898151Z"
     }
    }
   }
