feat: impl function to fetch block by timestamp

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,42 +14,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ARBITRUM\n",
-      "1840.088502140251486439064707\n",
-      "1849.112740619212568255530924\n",
-      "1840.246733687705931575477001\n",
-      "1.000468223339994222704040111\n",
-      "1.385883244842785215745603406\n",
-      "1839.306156742747865786560441\n",
-      "1.001325804118963713902572610\n",
-      "MAINNET\n",
-      "1837.999723470568645632911054\n",
-      "1885.826672117525479253395465\n",
-      "1826.533874641722987003287631\n",
-      "1837.840741394329575601953494\n",
-      "1838.533532042886070650433172\n",
-      "28.62142189350756253118170066\n",
-      "1854.658730032151914350447206\n",
-      "0.9829942342377910579539661548\n",
-      "1845.385858087329759807846652\n",
-      "61.57247132094396709479301097\n",
-      "65.83695633899880303677808390\n",
-      "232.3431847552983452300305698\n",
-      "0.8002158631486512624870551206\n",
-      "1848.757602533177018203754737\n",
-      "11.59042947158728450853396906\n",
-      "POLYGON\n",
-      "0.9995170983294423379875944963\n",
-      "0.9983289292298759328377664270\n",
-      "0.6682961564208527327482874348\n",
-      "0.6679009027278375185140301962\n",
-      "1837.899610310451431248558119\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[19], line 28\u001B[0m\n\u001B[1;32m     26\u001B[0m arb_timestamp_now \u001B[38;5;241m=\u001B[39m arb_web3\u001B[38;5;241m.\u001B[39meth\u001B[38;5;241m.\u001B[39mget_block(arb_block)\u001B[38;5;241m.\u001B[39mtimestamp\n\u001B[1;32m     27\u001B[0m \u001B[38;5;66;03m# Given Arb block time, we want to look back 2 weeks:\u001B[39;00m\n\u001B[0;32m---> 28\u001B[0m arb_block_2_weeks_ago \u001B[38;5;241m=\u001B[39m \u001B[43marb_block\u001B[49m \u001B[38;5;241m-\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m7\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m24\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m60\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m60\u001B[39m \u001B[38;5;241m/\u001B[39m ARB_CHAIN_BLOCK_TIME)\n\u001B[1;32m     29\u001B[0m arb_timestamp_2_weeks_ago \u001B[38;5;241m=\u001B[39m arb_web3\u001B[38;5;241m.\u001B[39meth\u001B[38;5;241m.\u001B[39mget_block(\u001B[38;5;28mint\u001B[39m(arb_block_2_weeks_ago))\u001B[38;5;241m.\u001B[39mtimestamp\n\u001B[1;32m     30\u001B[0m \u001B[38;5;66;03m# Convert to datetime:\u001B[39;00m\n",
+      "Cell \u001B[0;32mIn[19], line 28\u001B[0m\n\u001B[1;32m     26\u001B[0m arb_timestamp_now \u001B[38;5;241m=\u001B[39m arb_web3\u001B[38;5;241m.\u001B[39meth\u001B[38;5;241m.\u001B[39mget_block(arb_block)\u001B[38;5;241m.\u001B[39mtimestamp\n\u001B[1;32m     27\u001B[0m \u001B[38;5;66;03m# Given Arb block time, we want to look back 2 weeks:\u001B[39;00m\n\u001B[0;32m---> 28\u001B[0m arb_block_2_weeks_ago \u001B[38;5;241m=\u001B[39m \u001B[43marb_block\u001B[49m \u001B[38;5;241m-\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m7\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m24\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m60\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m60\u001B[39m \u001B[38;5;241m/\u001B[39m ARB_CHAIN_BLOCK_TIME)\n\u001B[1;32m     29\u001B[0m arb_timestamp_2_weeks_ago \u001B[38;5;241m=\u001B[39m arb_web3\u001B[38;5;241m.\u001B[39meth\u001B[38;5;241m.\u001B[39mget_block(\u001B[38;5;28mint\u001B[39m(arb_block_2_weeks_ago))\u001B[38;5;241m.\u001B[39mtimestamp\n\u001B[1;32m     30\u001B[0m \u001B[38;5;66;03m# Convert to datetime:\u001B[39;00m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1179\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.SafeCallWrapper.__call__\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:620\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:929\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:920\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:317\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.do_wait_suspend\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1160\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[1;32m   1157\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[1;32m   1159\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[0;32m-> 1160\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1175\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[1;32m   1172\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[1;32m   1174\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[0;32m-> 1175\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1177\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[1;32m   1179\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -134,8 +117,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-04T14:36:28.428665Z",
-     "start_time": "2023-09-04T14:33:58.463810Z"
+     "end_time": "2023-09-11T10:28:06.201980Z",
+     "start_time": "2023-09-11T10:28:01.728246Z"
     }
    },
    "id": "39d87004addaae1b"
